@@ -6,55 +6,55 @@
         margin-left:10%;
         margin-right:10%;
         margin-top:15%;
-        height:120px
+        height:120px;
     }
-        
+
     .grey-box2 {
         margin-left:10%;
         margin-right:10%;
-        height:100%
+        height:100%;
     }
-        
-    .grey-box3 { 
+
+    .grey-box3 {
         margin-left:10%;
         margin-right:10%;
-        height:50px
+        height:50px;
     }
-        
-    .green-box { 
+
+    .green-box {
         position:absolute;
         top:0;
         width:50%;
         text-align:right;
         height:100%;
         background-color:#00a000;
-        color:#00a000
-    }
-        
-    .greyColor { 
-        background-color:#cccccc
-    }
-        
-    #region1, #region2, #region3 { 
-        border:1px solid black
-    }
-        
-    #region1 { 
-        position:relative;
-        width:200px;
-        height:150px
-    }
-        
-    #region2 { 
-        position:relative;
-        width:300px;
-        height:180px
+        color:#00a000;
     }
 
-    #region3 { 
+    .greyColor {
+        background-color:#cccccc;
+    }
+
+    #region1, #region2, #region3 {
+        border:1px solid black;
+    }
+
+    #region1 {
+        position:relative;
+        width:200px;
+        height:150px;
+    }
+
+    #region2 {
+        position:relative;
+        width:300px;
+        height:180px;
+    }
+
+    #region3 {
         position:relative;
         width:120px;
-        height:120px
+        height:120px;
     }
 </style>
 </head>
@@ -72,10 +72,10 @@ the right side of the light grey boxes in each region. No red should be visible.
                 Some text.<br>
                 Some text.<br>
                 Some text.<br>
-                Some text.<br> 
-                Some text.<br> 
-                Some text.<br> 
-                Some text.<br> 
+                Some text.<br>
+                Some text.<br>
+                Some text.<br>
+                Some text.<br>
             </div>
         </div>
     </div>
@@ -86,9 +86,9 @@ the right side of the light grey boxes in each region. No red should be visible.
                 Some text.<br>
                 Some text.<br>
                 Some text.<br>
-                Some text.<br> 
-                Some text.<br> 
-                Some text.<br> 
+                Some text.<br>
+                Some text.<br>
+                Some text.<br>
                 Some text.<br>
                 Some text.<br>
                 Some text.<br>
@@ -98,8 +98,10 @@ the right side of the light grey boxes in each region. No red should be visible.
     <div id="region3">
         <div class="grey-box3 greyColor">
             <div class="green-box">
-                 Some text.<br> 
+                 Some text.<br>
             </div>
         </div>
     </div>
 </div>
+</body>
+</html>
